--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <body>
     <nav>
         <ul>
-            <li><a href = "#">About</a></li>
-            <li><a href = "#">Kontakt</a></li>
+            <li><a href = "about.html">About</a></li>
+            <li><a href = "contact.html">Kontakt</a></li>
            <li>
             <ul><li><a href="#"></a></li></ul>
            </li>
