--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <li><a href = "about.html">About</a></li>
             <li><a href = "contact.html">Kontakt</a></li>
            <li>
-            <ul><li><a href="#"></a></li></ul>
+            <ul><li><a href="#">hi</a></li></ul>
            </li>
         </ul>
     </nav>
