--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
 <body>
     <nav>
         <ul>
-            <li><a href = "about.html">About</a></li>
+            <li><a href = "about.html">Über uns</a></li>
             <li><a href = "contact.html">Kontakt</a></li>
+            <li><a href="index.html">Home</a></li>
            <li>
             <ul><li><a href="#">hi</a></li></ul>
            </li>
         </ul>
     </nav>
+    <h1>Dies ist der Homebildschirm</h1>
 </body>
 </html>
