--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,6 @@
            </li>
         </ul>
     </nav>
-    <h1>Hier stehen die Kontaktdaten</h1>
+    <p>Hier stehen die Kontaktdaten</p>
 </body>
 </html>
