--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Elektro Decker</title>
+        <title>Elektro Decker Kontakt</title>
         <link rel="stylesheet" href="styles.css">
     </head>
 <body>
@@ -15,6 +15,6 @@
            </li>
         </ul>
     </nav>
-    <p>Hier stehen die Kontaktdaten</p>
+    <h1>Hier stehen die Kontaktdaten</h1>
 </body>
 </html>
