--- a/contact.html
+++ b/contact.html
@@ -9,10 +9,9 @@
         <ul>
             <li><a href = "about.html">Über uns</a></li>
             <li><a href = "contact.html">Kontakt</a></li>
-            <li><a href="index.html">Home</a></li>
-           <li>
+            <li><a href="index.html">Home</a>
             <ul><li><a href="#">hi</a></li></ul>
-           </li>
+            </li>
         </ul>
     </nav>
     <h1>Hier stehen die Kontaktdaten</h1>
