--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ body, html {
   <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button">ÜBER UNS</a>
   <a href="#team" onclick="w3_close()" class="w3-bar-item w3-button">TEAM</a>
   <a href="#work" onclick="w3_close()" class="w3-bar-item w3-button">PROJEKTE</a>
-  <a href="#pricing" onclick="w3_close()" class="w3-bar-item w3-button">KOSTEN</a>
+  <a href="#pricing" onclick="w3_close()" class="w3-bar-item w3-button">PREISE</a>
   <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button">KONTAKT</a>
 </nav>
 
@@ -127,23 +127,23 @@ body, html {
   <div class="w3-row-padding w3-grayscale" style="margin-top:64px">
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-card">
-        <img src="/w3images/team2.jpg" alt="John" style="width:100%">
+        <img src="/w3images/team2.jpg" alt="Michael" style="width:100%">
         <div class="w3-container">
           <h3>Michael Decker</h3>
           <p class="w3-opacity">Untermehmensleiter</p>
           <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-          <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Contact</button></p>
+          <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Kontakt</button></p>
         </div>
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-card">
-        <img src="/w3images/team1.jpg" alt="Jane" style="width:100%">
+        <img src="/w3images/team1.jpg" alt="Christian" style="width:100%">
         <div class="w3-container">
           <h3>Christian</h3>
-          <p class="w3-opacity">Art Director</p>
+          <p class="w3-opacity">Arbeitnehmer</p>
           <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-          <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Contact</button></p>
+          <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Kontakt</button></p>
         </div>
       </div>
     </div>
@@ -152,9 +152,9 @@ body, html {
         <img src="/w3images/team3.jpg" alt="Mike" style="width:100%">
         <div class="w3-container">
           <h3>Mike Ross</h3>
-          <p class="w3-opacity">Web Designer</p>
+          <p class="w3-opacity">Arbeitnehmer</p>
           <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-          <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Contact</button></p>
+          <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Kontakt</button></p>
         </div>
       </div>
     </div>
@@ -165,7 +165,7 @@ body, html {
           <h3>Dan Star</h3>
           <p class="w3-opacity">Designer</p>
           <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-          <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Contact</button></p>
+          <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Kontakt</button></p>
         </div>
       </div>
     </div>
@@ -176,26 +176,26 @@ body, html {
 <div class="w3-container w3-row w3-center w3-dark-grey w3-padding-64">
   <div class="w3-quarter">
     <span class="w3-xxlarge">14+</span>
-    <br>Partners
+    <br>Partner
   </div>
   <div class="w3-quarter">
     <span class="w3-xxlarge">55+</span>
-    <br>Projects Done
+    <br>Erfolgreiche Projekte
   </div>
   <div class="w3-quarter">
     <span class="w3-xxlarge">89+</span>
-    <br>Happy Clients
+    <br>Kunden
   </div>
   <div class="w3-quarter">
     <span class="w3-xxlarge">150+</span>
-    <br>Meetings
+    <br>Kundentreffen
   </div>
 </div>
 
 <!-- Work Section -->
 <div class="w3-container" style="padding:128px 16px" id="work">
-  <h3 class="w3-center">OUR WORK</h3>
-  <p class="w3-center w3-large">What we've done for people</p>
+  <h3 class="w3-center">PROJEKTE</h3>
+  <p class="w3-center w3-large">Was wir für Menschen tun.</p>
 
   <div class="w3-row-padding" style="margin-top:64px">
     <div class="w3-col l3 m6">
@@ -241,14 +241,14 @@ body, html {
 <div class="w3-container w3-light-grey w3-padding-64">
   <div class="w3-row-padding">
     <div class="w3-col m6">
-      <h3>Our Skills.</h3>
+      <h3>Unsere Fähigkeiten</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod<br>
       tempor incididunt ut labore et dolore.</p>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod<br>
       tempor incididunt ut labore et dolore.</p>
     </div>
     <div class="w3-col m6">
-      <p class="w3-wide"><i class="fa fa-camera w3-margin-right"></i>Photography</p>
+      <p class="w3-wide"><i class="fa fa-camera w3-margin-right"></i>Fotografie</p>
       <div class="w3-grey">
         <div class="w3-container w3-dark-grey w3-center" style="width:90%">90%</div>
       </div>
@@ -266,12 +266,12 @@ body, html {
 
 <!-- Pricing Section -->
 <div class="w3-container w3-center w3-dark-grey" style="padding:128px 16px" id="pricing">
-  <h3>PRICING</h3>
-  <p class="w3-large">Choose a pricing plan that fits your needs.</p>
+  <h3>PREISE</h3>
+  <p class="w3-large">Wähle die Option aus, die dir gefällt.</p>
   <div class="w3-row-padding" style="margin-top:64px">
     <div class="w3-third w3-section">
       <ul class="w3-ul w3-white w3-hover-shadow">
-        <li class="w3-black w3-xlarge w3-padding-32">Basic</li>
+        <li class="w3-black w3-xlarge w3-padding-32">Option 1</li>
         <li class="w3-padding-16"><b>10GB</b> Storage</li>
         <li class="w3-padding-16"><b>10</b> Emails</li>
         <li class="w3-padding-16"><b>10</b> Domains</li>
@@ -281,13 +281,13 @@ body, html {
           <span class="w3-opacity">per month</span>
         </li>
         <li class="w3-light-grey w3-padding-24">
-          <button class="w3-button w3-black w3-padding-large">Sign Up</button>
+          <button class="w3-button w3-black w3-padding-large">Auswählen</button>
         </li>
       </ul>
     </div>
     <div class="w3-third">
       <ul class="w3-ul w3-white w3-hover-shadow">
-        <li class="w3-red w3-xlarge w3-padding-48">Pro</li>
+        <li class="w3-red w3-xlarge w3-padding-48">Option 2</li>
         <li class="w3-padding-16"><b>25GB</b> Storage</li>
         <li class="w3-padding-16"><b>25</b> Emails</li>
         <li class="w3-padding-16"><b>25</b> Domains</li>
@@ -297,13 +297,13 @@ body, html {
           <span class="w3-opacity">per month</span>
         </li>
         <li class="w3-light-grey w3-padding-24">
-          <button class="w3-button w3-black w3-padding-large">Sign Up</button>
+          <button class="w3-button w3-black w3-padding-large">Auswählen</button>
         </li>
       </ul>
     </div>
     <div class="w3-third w3-section">
       <ul class="w3-ul w3-white w3-hover-shadow">
-        <li class="w3-black w3-xlarge w3-padding-32">Premium</li>
+        <li class="w3-black w3-xlarge w3-padding-32">Option 3</li>
         <li class="w3-padding-16"><b>50GB</b> Storage</li>
         <li class="w3-padding-16"><b>50</b> Emails</li>
         <li class="w3-padding-16"><b>50</b> Domains</li>
@@ -313,7 +313,7 @@ body, html {
           <span class="w3-opacity">per month</span>
         </li>
         <li class="w3-light-grey w3-padding-24">
-          <button class="w3-button w3-black w3-padding-large">Sign Up</button>
+          <button class="w3-button w3-black w3-padding-large">Auswählen</button>
         </li>
       </ul>
     </div>
@@ -322,11 +322,11 @@ body, html {
 
 <!-- Contact Section -->
 <div class="w3-container w3-light-grey" style="padding:128px 16px" id="contact">
-  <h3 class="w3-center">CONTACT</h3>
-  <p class="w3-center w3-large">Lets get in touch. Send us a message:</p>
+  <h3 class="w3-center">Kontakt</h3>
+  <p class="w3-center w3-large">Schreibe uns eine E-mail:</p>
   <div style="margin-top:48px">
-    <p><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right"></i> Chicago, US</p>
-    <p><i class="fa fa-phone fa-fw w3-xxlarge w3-margin-right"></i> Phone: +00 151515</p>
+    <p><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right"></i> Reutlingen, Deutschland</p>
+    <p><i class="fa fa-phone fa-fw w3-xxlarge w3-margin-right"></i> Telefonnummer: +49 23452 235235</p>
     <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> Email: mail@mail.com</p>
     <br>
     <form action="/action_page.php" target="_blank">
@@ -336,7 +336,7 @@ body, html {
       <p><input class="w3-input w3-border" type="text" placeholder="Message" required name="Message"></p>
       <p>
         <button class="w3-button w3-black" type="submit">
-          <i class="fa fa-paper-plane"></i> SEND MESSAGE
+          <i class="fa fa-paper-plane"></i> SENDEN
         </button>
       </p>
     </form>
@@ -347,7 +347,7 @@ body, html {
 
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-64">
-  <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
+  <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>Nach oben</a>
   <div class="w3-xlarge w3-section">
     <i class="fa fa-facebook-official w3-hover-opacity"></i>
     <i class="fa fa-instagram w3-hover-opacity"></i>
@@ -356,7 +356,6 @@ body, html {
     <i class="fa fa-twitter w3-hover-opacity"></i>
     <i class="fa fa-linkedin w3-hover-opacity"></i>
   </div>
-  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
 </footer>
  
 <script>
