--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@ body, html {
       </p>
     </form>
 
-    <form action="http://formspree.io/ahlgrimyann@gmail.com"><input type="email" name="_replyto"><textarea   name="body"></textarea><input type="submit" value="Send"></form>
+    <form method="POST" action="http://formspree.io/ahlgrimyann@gmail.com"><input type="email" name="_replyto"><textarea   name="body"></textarea><input type="submit" value="Send"></form>
 
     <!-- Image of location/map -->
     <img src="/w3images/map.jpg" class="w3-image w3-greyscale" style="width:100%;margin-top:48px">
