--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@ body, html {
     <p><i class="fa fa-phone fa-fw w3-xxlarge w3-margin-right"></i> Telefonnummer: +49 23452 235235</p>
     <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> Email: mail@mail.com</p>
     <br>
-    <form action="http://formspree.io/ahlgrimyann@gmail.com" method="POST" target="_blank">
+    <form action="https://formspree.io/ahlgrimyann@gmail.com" method="POST" target="_blank">
       <p><input class="w3-input w3-border" type="email" placeholder="Email" required name="Email"></p>
       <p><input class="w3-input w3-border" type="text" placeholder="Message" required name="Message"></p>
       <p>
