--- a/index.html
+++ b/index.html
@@ -330,8 +330,8 @@ body, html {
     <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> Email: mail@mail.com</p>
     <br>
     <form action="https://formspree.io/ahlgrimyann@gmail.com" method="POST" target="_blank">
-      <p><input class="w3-input w3-border" type="email" placeholder="Email" required name="Email"></p>
-      <p><input class="w3-input w3-border" type="text" placeholder="Message" required name="Message"></p>
+      <p><input class="w3-input w3-border" type="email" placeholder="Email" name="email"></p>
+      <p><input class="w3-input w3-border" type="text" placeholder="Message" name="message"></p>
       <p>
         <button class="w3-button w3-black" type="submit">
           <i class="fa fa-paper-plane"></i> SENDEN
