--- a/index.html
+++ b/index.html
@@ -327,11 +327,11 @@ body, html {
   <div style="margin-top:48px">
     <p><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right"></i> Reutlingen, Deutschland</p>
     <p><i class="fa fa-phone fa-fw w3-xxlarge w3-margin-right"></i> Telefonnummer: +49 23452 235235</p>
-    <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> Email: mail@mail.com</p>
+    <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> Email: elektrodeckertest@gmail.com</p>
     <br>
     <form action="https://formspree.io/f/mvoleoyq" method="POST" target="_blank">
-      <p><input class="w3-input w3-border" type="email" placeholder="Email" name="email"></p>
-      <p><input class="w3-input w3-border" type="text" placeholder="Message" name="message"></p>
+      <p><input class="w3-input w3-border" type="email" placeholder="Deine Email-Adresse" name="email"></p>
+      <p><input class="w3-input w3-border" type="textarea" placeholder="Nachricht" name="message"></p>
       <p>
         <button class="w3-button w3-black" type="submit">
           <i class="fa fa-paper-plane"></i> SENDEN
