--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@ body, html {
     <br>
     <form action="https://formspree.io/f/mvoleoyq" method="POST" target="_blank">
       <p><input class="w3-input w3-border" type="email" placeholder="Deine Email-Adresse" name="email"></p>
-      <p><input class="w3-input w3-border" type="textarea" placeholder="Nachricht" name="message"></p>
+      <p><textarea class="w3-input w3-border" type="textarea" placeholder="Nachricht" name="message"></textarea></p>
       <p>
         <button class="w3-button w3-black" type="submit">
           <i class="fa fa-paper-plane"></i> SENDEN
