--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@ body, html {
 }
 
 /* Full height image header */
+/*background size = cover*/
 .bgimg-1 {
   background-position: center;
-  background-size: cover;
+  background-size: auto;
   background-image: url("Elektro-Decker_Logo.jpeg");
   min-height: 100%;
 }
