--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@ body, html {
 /*background size = cover*/
 .bgimg-1 {
   background-position: center;
-  background-size: auto;
+  /*background-size: cover;*/
+  width: pixels;
+  height: 100px;
   background-image: url("Elektro-Decker_Logo.jpeg");
   min-height: 100%;
 }
