--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@ body, html {
 /*background size = cover*/
 .bgimg-1 {
   background-position: center;
-  /*background-size: cover;*/
-  width: pixels;
-  height: 100px;
+  background-size: contain;
   background-image: url("Elektro-Decker_Logo.jpeg");
   min-height: 100%;
 }
