--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ body, html {
     <div class="w3-quarter">
       <i class="fa fa-cog w3-margin-bottom w3-jumbo"></i>
       <p class="w3-large">Support</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+      <p>Text...</p>
     </div>
   </div>
 </div>
@@ -112,7 +112,7 @@ body, html {
   <div class="w3-row-padding">
     <div class="w3-col m6">
       <h3>Wir ...</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod<br>tempor incididunt ut labore et dolore.</p>
+      <p>Text...</p>
       <p><a href="#work" class="w3-button w3-black"><i class="fa fa-th"> </i> Unsere Projekte</a></p>
     </div>
     <div class="w3-col m6">
@@ -132,7 +132,7 @@ body, html {
         <div class="w3-container">
           <h3>Michael Decker</h3>
           <p class="w3-opacity">Untermehmensleiter</p>
-          <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+          <p>Text...</p>
           <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Kontakt</button></p>
         </div>
       </div>
@@ -143,7 +143,7 @@ body, html {
         <div class="w3-container">
           <h3>Christian</h3>
           <p class="w3-opacity">Arbeitnehmer</p>
-          <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+          <p>Text...</p>
           <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Kontakt</button></p>
         </div>
       </div>
@@ -154,7 +154,7 @@ body, html {
         <div class="w3-container">
           <h3>Mike Ross</h3>
           <p class="w3-opacity">Arbeitnehmer</p>
-          <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+          <p>Text...</p>
           <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Kontakt</button></p>
         </div>
       </div>
@@ -165,7 +165,7 @@ body, html {
         <div class="w3-container">
           <h3>Dan Star</h3>
           <p class="w3-opacity">Designer</p>
-          <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+          <p>Text...</p>
           <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Kontakt</button></p>
         </div>
       </div>
@@ -243,10 +243,10 @@ body, html {
   <div class="w3-row-padding">
     <div class="w3-col m6">
       <h3>Unsere Fähigkeiten</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod<br>
-      tempor incididunt ut labore et dolore.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod<br>
-      tempor incididunt ut labore et dolore.</p>
+      <p>Text...<br>
+     Text...</p>
+      <p>Text...<br>
+      Text...</p>
     </div>
     <div class="w3-col m6">
       <p class="w3-wide"><i class="fa fa-camera w3-margin-right"></i>Fotografie</p>
