--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ body, html {
 /*background size = cover*/
 .bgimg-1 {
   background-position: center;
-  background-size: 300px 100px;
+  background-size: 100% contain;
   background-image: url("Elektro-Decker_Logo.jpeg");
   min-height: 100%;
 }
