--- a/index.html
+++ b/index.html
@@ -200,13 +200,13 @@ body, html {
 
   <div class="w3-row-padding" style="margin-top:64px">
     <div class="w3-col l3 m6">
-      <img src="/w3images/tech_mic.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A microphone">
+      <img src="Steckdose.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Steckdose">
     </div>
     <div class="w3-col l3 m6">
-      <img src="/w3images/tech_phone.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A phone">
+      <img src="Stromkasten.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Stromkasten">
     </div>
     <div class="w3-col l3 m6">
-      <img src="/w3images/tech_drone.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A drone">
+      <img src="Stromleitung.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Stromleitung">
     </div>
     <div class="w3-col l3 m6">
       <img src="/w3images/tech_sound.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Soundbox">
@@ -215,10 +215,10 @@ body, html {
 
   <div class="w3-row-padding w3-section">
     <div class="w3-col l3 m6">
-      <img src="/w3images/tech_tablet.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A tablet">
+      <img src="Werkzeuge.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Werkzeuge">
     </div>
     <div class="w3-col l3 m6">
-      <img src="/w3images/tech_camera.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A camera">
+      <img src="Micha.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Micha">
     </div>
     <div class="w3-col l3 m6">
       <img src="/w3images/tech_typewriter.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A typewriter">
