--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@ body, html {
       <img src="Micha.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Micha">
     </div>
     <div class="w3-col l3 m6">
-      <img src="/w3images/tech_typewriter.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A typewriter">
+      <img src="Lichtschalter.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Lichtschalter">
     </div>
     <div class="w3-col l3 m6">
       <img src="/w3images/tech_tableturner.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A tableturner">
