--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ body, html {
       <img src="Stromleitung.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Stromleitung">
     </div>
     <div class="w3-col l3 m6">
-      <img src="/w3images/tech_sound.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Soundbox">
+      <img src="Gartenbeleuchtung.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Gartenbeleuchtung">
     </div>
   </div>
 
@@ -224,7 +224,7 @@ body, html {
       <img src="Lichtschalter.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Lichtschalter">
     </div>
     <div class="w3-col l3 m6">
-      <img src="/w3images/tech_tableturner.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A tableturner">
+      <img src="Hausbeleuchtung.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Hausbeleuchtung">
     </div>
   </div>
 </div>
