--- a/index.html
+++ b/index.html
@@ -200,31 +200,31 @@ body, html {
 
   <div class="w3-row-padding" style="margin-top:64px">
     <div class="w3-col l3 m6">
-      <img src="Steckdose.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Steckdose">
+      <img src="Steckdose.JPG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Steckdose">
     </div>
     <div class="w3-col l3 m6">
-      <img src="Stromkasten.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Stromkasten">
+      <img src="Stromkasten.JPG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Stromkasten">
     </div>
     <div class="w3-col l3 m6">
-      <img src="Stromleitung.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Stromleitung">
+      <img src="Stromleitung.JPG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Stromleitung">
     </div>
     <div class="w3-col l3 m6">
-      <img src="Gartenbeleuchtung.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Gartenbeleuchtung">
+      <img src="Gartenbeleuchtung.JPG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Gartenbeleuchtung">
     </div>
   </div>
 
   <div class="w3-row-padding w3-section">
     <div class="w3-col l3 m6">
-      <img src="Werkzeuge.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Werkzeuge">
+      <img src="Werkzeuge.JPG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Werkzeuge">
     </div>
     <div class="w3-col l3 m6">
-      <img src="Micha.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Micha">
+      <img src="Micha.JPG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Micha">
     </div>
     <div class="w3-col l3 m6">
-      <img src="Lichtschalter.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Lichtschalter">
+      <img src="Lichtschalter.JPG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Lichtschalter">
     </div>
     <div class="w3-col l3 m6">
-      <img src="Hausbeleuchtung.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Hausbeleuchtung">
+      <img src="Hausbeleuchtung.JPG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Hausbeleuchtung">
     </div>
   </div>
 </div>
