--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ body, html {
       <img src="Stromleitung.JPG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Stromleitung">
     </div>
     <div class="w3-col l3 m6">
-      <img src="Gartenbeleuchtung.JPG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Gartenbeleuchtung">
+      <img src="Gartenbeleuchtung.JPG" style="width:100%; height:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Gartenbeleuchtung">
     </div>
   </div>
 
@@ -224,7 +224,7 @@ body, html {
       <img src="Lichtschalter.JPG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Lichtschalter">
     </div>
     <div class="w3-col l3 m6">
-      <img src="Hausbeleuchtung.JPG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Hausbeleuchtung">
+      <img src="Hausbeleuchtung.JPG" style="width:100%; height:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Hausbeleuchtung">
     </div>
   </div>
 </div>
