--- a/index.html
+++ b/index.html
@@ -266,6 +266,7 @@ body, html {
 </div>
 
 <!-- Pricing Section -->
+<!--
 <div class="w3-container w3-center w3-dark-grey" style="padding:128px 16px" id="pricing">
   <h3>PREISE</h3>
   <p class="w3-large">Wähle die Option aus, die dir gefällt.</p>
@@ -320,6 +321,7 @@ body, html {
     </div>
   </div>
 </div>
+-->
 
 <!-- Contact Section -->
 <div class="w3-container w3-light-grey" style="padding:128px 16px" id="contact">
@@ -327,8 +329,8 @@ body, html {
   <p class="w3-center w3-large">Schreibe uns eine E-mail:</p>
   <div style="margin-top:48px">
     <p><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right"></i> Reutlingen, Deutschland</p>
-    <p><i class="fa fa-phone fa-fw w3-xxlarge w3-margin-right"></i> Telefonnummer: +49 23452 235235</p>
-    <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> Email: elektrodeckertest@gmail.com</p>
+    <p><i class="fa fa-phone fa-fw w3-xxlarge w3-margin-right"></i> Telefon: +49 7121 1448557</p>
+    <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> Email: info@deckerelektro.de</p>
     <br>
     <form action="https://formspree.io/f/mvoleoyq" method="POST" target="_blank">
       <p><input class="w3-input w3-border" type="email" placeholder="Deine Email-Adresse" name="email"></p>
