--- a/index.html
+++ b/index.html
@@ -187,11 +187,11 @@ body, html {
     <span class="w3-xxlarge">89+</span>
     <br>Kunden
   </div>
-  <div class="w3-quarter">
+  <!--<div class="w3-quarter">
     <span class="w3-xxlarge">150+</span>
     <br>Kundentreffen
   </div>
-</div>
+</div>-->
 
 <!-- Work Section -->
 <div class="w3-container" style="padding:128px 16px" id="work">
@@ -249,15 +249,15 @@ body, html {
       Text...</p>
     </div>
     <div class="w3-col m6">
-      <p class="w3-wide"><i class="fa fa-camera w3-margin-right"></i>Fotografie</p>
+      <p class="w3-wide"><i class="fa fa-camera w3-margin-right"></i>Installation</p>
       <div class="w3-grey">
         <div class="w3-container w3-dark-grey w3-center" style="width:90%">90%</div>
       </div>
-      <p class="w3-wide"><i class="fa fa-desktop w3-margin-right"></i>Web Design</p>
+      <p class="w3-wide"><i class="fa fa-desktop w3-margin-right"></i>Rohbau</p>
       <div class="w3-grey">
         <div class="w3-container w3-dark-grey w3-center" style="width:85%">85%</div>
       </div>
-      <p class="w3-wide"><i class="fa fa-photo w3-margin-right"></i>Photoshop</p>
+      <p class="w3-wide"><i class="fa fa-photo w3-margin-right"></i>Weitere Fähigkeit</p>
       <div class="w3-grey">
         <div class="w3-container w3-dark-grey w3-center" style="width:75%">75%</div>
       </div>
