--- a/index.html
+++ b/index.html
@@ -86,22 +86,22 @@ body, html {
   <div class="w3-row-padding w3-center" style="margin-top:64px">
     <div class="w3-quarter">
       <i class="fa fa-desktop w3-margin-bottom w3-jumbo w3-center"></i>
-      <p class="w3-large">Responsive</p>
+      <p class="w3-large">Kundenkontakt</p>
       <p>Text...</p>
     </div>
     <div class="w3-quarter">
       <i class="fa fa-heart w3-margin-bottom w3-jumbo"></i>
-      <p class="w3-large">Passion</p>
+      <p class="w3-large">Leidenschaftlich</p>
       <p>Text...</p>
     </div>
     <div class="w3-quarter">
       <i class="fa fa-diamond w3-margin-bottom w3-jumbo"></i>
-      <p class="w3-large">Design</p>
+      <p class="w3-large">Leistungsstark</p>
       <p>Text...</p>
     </div>
     <div class="w3-quarter">
       <i class="fa fa-cog w3-margin-bottom w3-jumbo"></i>
-      <p class="w3-large">Support</p>
+      <p class="w3-large">Kundendienst</p>
       <p>Text...</p>
     </div>
   </div>
@@ -111,12 +111,12 @@ body, html {
 <div class="w3-container w3-light-grey" style="padding:128px 16px">
   <div class="w3-row-padding">
     <div class="w3-col m6">
-      <h3>Wir ...</h3>
+      <h3>Wir..</h3>
       <p>Text...</p>
       <p><a href="#work" class="w3-button w3-black"><i class="fa fa-th"> </i> Unsere Projekte</a></p>
     </div>
     <div class="w3-col m6">
-      <img class="w3-image w3-round-large" src="/w3images/phone_buildings.jpg" alt="Buildings" width="700" height="394">
+      <img class="w3-image w3-round-large" src="Hausbeleuchtung.jpg" alt="Projekt_Hausbeleuchtung" width="700" height="394">
     </div>
   </div>
 </div>
@@ -164,7 +164,7 @@ body, html {
         <img src="/w3images/team4.jpg" alt="Dan" style="width:100%">
         <div class="w3-container">
           <h3>Dan Star</h3>
-          <p class="w3-opacity">Designer</p>
+          <p class="w3-opacity">Arbeitnehmer</p>
           <p>Text...</p>
           <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Kontakt</button></p>
         </div>
